--- a/src/css/lib-common.less
+++ b/src/css/lib-common.less
@@ -30,7 +30,7 @@ dl, ol, ul, li, dd {
 
 // LAYOUT  STYLE
 .container {
-  .m-auto;
+  .m-auto(0,0);
   width: 1170px;
   height: auto;
   overflow: hidden
@@ -40,8 +40,8 @@ dl, ol, ul, li, dd {
   display: none;
 }
 
-.m-auto {
-  margin: auto;
+.m-auto(@top,@btm) {
+  margin:@top auto @btm auto;
 }
 
 .text-center {
@@ -55,7 +55,9 @@ dl, ol, ul, li, dd {
 .text-right {
   text-align: right;
 }
-
+.pos-f{
+  position: fixed;
+}
 .pos-r {
   position: relative;
 }
@@ -199,11 +201,21 @@ dl, ol, ul, li, dd {
 @red: rgba(211, 51, 49, 1);
 
 // HEADER
-
 #header {
   .clearfix;
   width: percentage(@half*2);
   overflow: visible;
+  background-color: @white;
+  z-index: 9999;
+  //&.defalt {
+  //  .pos-r;
+  //}
+  //
+  //&.fixed{
+  //  .pos-f;
+  //  background: red;
+  //
+  //}
   #logo {
     .fl;
     .pl(35px);
@@ -233,6 +245,7 @@ dl, ol, ul, li, dd {
       width: 120px;
       background: #da271b;
       top: 94px;
+      left: 0;
       overflow: hidden;
     }
     li {
@@ -367,7 +380,7 @@ dl, ol, ul, li, dd {
         &.tel:hover:before {
           background: url("@{images}/icon-1.png") no-repeat -233px -202px;
         }
-        &.wechat:hover:before{
+        &.wechat:hover:before {
           background: url("@{images}/icon-1.png") no-repeat -311px -178px;
         }
 
