--- a/dev/css/style-index.css
+++ b/dev/css/style-index.css
@@ -1336,8 +1336,129 @@ dd {
 #news .tab-content {
   margin-top: 45px;
   margin-bottom: 45px;
+  zoom: 1;
+  overflow: visible;
   height: 276px;
-  background: red;
+}
+
+#news .tab-content:before {
+  content: '';
+  display: block;
+}
+
+#news .tab-content:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+#news .tab-content .last-news,
+#news .tab-content li {
+  float: left;
+  width: 380px;
+  background-color: #ffffff;
+  box-sizing: border-box;
+  padding: 15px 10px;
+}
+
+#news .tab-content .last-news:hover,
+#news .tab-content li:hover {
+  box-shadow: 0px 4px 10px rgba(36, 36, 36, 0.35);
+}
+
+#news .tab-content .last-news .viewImg,
+#news .tab-content li .viewImg {
+  position: relative;
+}
+
+#news .tab-content .last-news .viewImg > img,
+#news .tab-content li .viewImg > img {
+  width: 100%;
+  max-width: 100%;
+}
+
+#news .tab-content .last-news .viewImg > time,
+#news .tab-content li .viewImg > time {
+  position: absolute;
+  text-align: center;
+  font-size: 12px;
+  line-height: 18px;
+  color: #ffffff;
+  background-color: #d33331;
+  width: 30px;
+  height: 36px;
+  left: 0;
+  top: 0;
+}
+
+#news .tab-content .last-news .viewImg > time > span,
+#news .tab-content li .viewImg > time > span {
+  display: block;
+}
+
+#news .tab-content .last-news h5,
+#news .tab-content li h5 {
+  margin-bottom: 10px;
+  font-size: 14px;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+#news .tab-content .last-news p,
+#news .tab-content li p {
+  font-size: 12px;
+  line-height: 1.6;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+#news .tab-content .last-news {
+  height: 276px;
+}
+
+#news .tab-content .last-news .viewImg {
+  width: 100%;
+}
+
+#news .tab-content .last-news .viewImg > img {
+  height: 172px;
+}
+
+#news .tab-content ul > li {
+  margin-right: 15px;
+  margin-bottom: 12px;
+  height: 132px;
+}
+
+#news .tab-content ul > li .viewImg {
+  float: left;
+  width: 140px;
+  margin-right: 10px;
+}
+
+#news .tab-content ul > li .viewImg > img {
+  height: 105px;
+}
+
+#news .tab-content ul.item4 {
+  float: right;
+  width: 775px;
+}
+
+#news .tab-content ul.item4 li:nth-of-type(2n) {
+  margin-right: 0;
+}
+
+#news .tab-content ul.item6 {
+  width: 100%;
+}
+
+#news .tab-content ul.item6 li:nth-of-type(3n) {
+  margin-right: 0;
 }
 
 #aboutUs {
