--- a/src/css/pages/index.less
+++ b/src/css/pages/index.less
@@ -360,10 +360,10 @@
         padding: 6px 10px;
         display: inline-block;
         cursor: pointer;
-        &:hover{
+        &:hover {
           color: @red;
         }
-        &.active{
+        &.active {
           background-color: @red;
           color: @white;
         }
@@ -373,9 +373,96 @@
   .tab-content {
     .mt(45px);
     .mb(45px);
+    .clearfix;
+    overflow: visible;
     height: 276px;
-    background: red;
-
+    //background: #cecece;
+    .last-news,
+    li {
+      .fl;
+      width: 380px;
+      background-color: @white;
+      box-sizing: border-box;
+      padding: 15px 10px;
+      &:hover {
+        box-shadow: 0px 4px 10px rgba(36, 36, 36, .35);
+      }
+      .viewImg {
+        .pos-r;
+        & > img {
+          width: 100%;
+          max-width: 100%;
+        }
+        & > time {
+          .pos-a;
+          .text-center;
+          font-size: 12px;
+          line-height: 18px;
+          color: @white;
+          background-color: @red;
+          width: 30px;
+          height: 36px;
+          left: 0;
+          top: 0;
+          & > span {
+            display: block;
+          }
+        }
+      }
+      h5 {
+        .mb(10px);
+        font-size: 14px;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+      }
+      p {
+        font-size: 12px;
+        line-height: 1.6;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+      }
+    }
+    .last-news {
+      height: 276px;
+      .viewImg {
+        width: 100%;
+        & > img {
+          height: 172px;
+        }
+      }
+    }
+    ul {
+      & > li {
+        .mr(15px);
+        .mb(12px);
+        height: 132px;
+        .viewImg {
+          .fl;
+          width: 140px;
+          .mr(10px);
+          & > img {
+            height: 105px;
+          }
+        }
+      }
+      &.item4 {
+        .fr;
+        width: 775px;
+        li:nth-of-type(2n) {
+          .mr(0);
+        }
+      }
+      &.item6 {
+        width: 100%;
+        li:nth-of-type(3n) {
+          .mr(0);
+        }
+      }
+    }
   }
 }
 
